--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,6 +12,7 @@ html {
 
 body {
   font-family: Helvetica;
+  line-height: 1.4;
 }
 
 /* Header Rules */
@@ -25,10 +26,15 @@ header {
   background-position: center;
 }
 
+.flex {
+  display: flex;
+  justify-content: flex-end;
+}
+
 /* Navbar Rules */
 
 nav {
-  padding: 1rem 1rem;
+  padding: 1rem 0rem;
   background-color: cadetblue;
   display: flex;
   align-items: center;
@@ -41,24 +47,20 @@ nav {
   align-items: center;
 }
 
-.logo img {
+nav img {
   height: 1rem;
-  padding-left: 1rem;
+  padding-left: 2rem;
   padding-right: 1rem;
 }
 
-.nav-item {
-  margin-right: 1rem;
-}
-
-.nav-button {
-
-  padding: 0 1rem;
+.nav-items {
+  padding-right: 2rem;
 }
 
 a {
   color: white;
   text-decoration: none;
+  padding: 0 1rem;
 }
 
 /* Banner Rules */
@@ -68,6 +70,7 @@ a {
   width: auto;
   display: inline-block;
   margin-top: 10rem;
+  margin-right: -2rem;
 }
 
 .banner h1 {
@@ -75,4 +78,63 @@ a {
   font-size: 2rem;
   line-height: 1.2;
   padding: 1.5rem 5rem;
+}
+
+/* Main Rules */
+
+.supporting {
+  display: flex;
+  justify-content: center;
+}
+
+.service {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3rem 3rem;
+  text-align: center;
+  height: 8rem;
+  width: 5rem;
+
+}
+
+.service img.paper {
+  width: 3.5rem;
+}
+
+.service img {
+  width: 5rem;
+}
+
+.info {
+  width: 35%;
+  padding: 3rem 2.5% 0rem 5rem;
+}
+
+.title {
+  background-color: cadetblue;
+  width: 10rem;
+  margin-bottom: 1rem;
+}
+
+.title h4 {
+  font-weight: bold;
+  font-size: 1rem;
+  color: white;
+  padding: 0.5rem 1.25rem;
+}
+
+/* Footer Rules */
+
+footer div {
+  background-color: azure;
+  margin-top: 5rem;
+  display: flex;
+  align-items: center;
+}
+
+footer img {
+  height: 1.5rem;
+  padding: 4rem 1rem 4rem 4rem;
 }
