--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,6 +63,10 @@ a {
   padding: 0 1rem;
 }
 
+.mobile {
+  display: none;
+}
+
 /* Banner Rules */
 
 .banner {
@@ -137,4 +141,95 @@ footer div {
 footer img {
   height: 1.5rem;
   padding: 4rem 1rem 4rem 4rem;
+}
+
+/* Media Queries */
+
+/* Tablet */
+
+@media only screen and (max-width: 1024px) {
+
+  .container {
+    max-width: 1024px;
+  }
+  header {
+    padding-top: 0rem;
+    height: 22rem;
+  }
+  .banner {
+    margin-top: 5rem;
+    margin-right: 2rem;
+  }
+  .banner h1 {
+    font-size: 1.33rem;
+    padding: 0.75rem 4rem;
+  }
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 640px) {
+
+  .desktop-tablet {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+  }
+
+  header {
+    height: 17rem;
+    background-position: 20%;
+    margin-bottom: 2.23rem;
+  }
+
+  .banner {
+    width: 100%;
+    margin-top: 9rem;
+    margin-right: auto;
+  }
+
+  .banner h1 {
+    font-size: 1rem;
+    text-align: center;
+    padding: 1rem 0rem;
+  }
+
+  .supporting {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .service {
+    font-size: 0.77rem;
+    padding: 1.54rem 0rem 0rem 0rem;
+  }
+
+  .philosophy {
+    margin-top: 3.77rem;
+  }
+
+  .info, .title {
+    width: 100%;
+  }
+
+  .info {
+    padding: 0;
+  }
+
+  .info p {
+    font-size: 0.77rem;
+    padding: 0rem 1rem 4rem 1rem;
+  }
+
+  footer div {
+    justify-content: center;
+    margin-top: 0rem;
+  }
+
+  footer img {
+    padding: 4rem 0rem;
+  }
+
 }
